Impements Helper API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,16 @@ set(INCLUDE
 Bookkeeper/include
 Calculator/include
 Parser/include
-FileManager/include)
+FileManager/include
+api/include)
 
 set(SOURCE
 main.cpp
 Bookkeeper/source/Bookkeeper.cpp
 Calculator/source/Calculator.cpp
 Parser/source/Parser.cpp
-FileManager/source/FileManager.cpp)
+FileManager/source/FileManager.cpp
+api/source/Helper.cpp)
 
 include_directories(${INCLUDE})
 
