--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,25 +4,19 @@ project(calculator)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 set(INCLUDE
-Bookkeeper/include
-Calculator/include
-Parser/include
-FileManager/include
+bookkeeper/include
+calculator/include
+parser/include
 api/include)
 
 set(SOURCE
 main.cpp
-Bookkeeper/source/Bookkeeper.cpp
-Calculator/source/Calculator.cpp
-Parser/source/Parser.cpp
-FileManager/source/FileManager.cpp
-api/source/Helper.cpp
-api/source/UIPainter.cpp)
-
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
+bookkeeper/source/bookkeeper.cpp
+calculator/source/calculator.cpp
+parser/source/parser.cpp
+api/source/helper.cpp
+)
 
 include_directories(${INCLUDE})
 
 add_executable(${PROJECT_NAME} ${SOURCE})
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
